# clap_app

./: .gitignore  README.md  app.py  clap_model.py  pyproject.toml  sample_audio_manager.py  visualization_manager.py
