[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "clap-app"
version = "0.1.0"
description = "CLAP (Contrastive Language-Audio Pretraining) Application with Streamlit"
readme = "README.md"
requires-python = ">=3.8.1"
license = "MIT"
authors = [
    {name = "mutomasa", email = "mutomasa@example.com"}
]
keywords = ["clap", "audio", "language", "contrastive-learning", "streamlit", "ai"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]

dependencies = [
    "streamlit>=1.28.0",
    "torch>=2.0.0",
    "torchaudio>=2.0.0",
    "transformers>=4.30.0",
    "librosa>=0.10.0",
    "soundfile>=0.12.0",
    "numpy>=1.24.0",
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
    "plotly>=5.15.0",
    "pandas>=2.0.0",
    "scipy>=1.10.0",
    "psutil>=5.9.0",
    "gradio>=4.0.0",
    "openai-whisper>=20231117",
    "pydub>=0.25.0",
    "requests>=2.31.0",
    "ffmpeg-python>=0.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "mypy>=1.5.0",
]

[project.urls]
Homepage = "https://github.com/mutomasa/clap_app"
Repository = "https://github.com/mutomasa/clap_app.git"
Issues = "https://github.com/mutomasa/clap_app/issues"

[project.scripts]
clap-app = "clap_app.app:main"

[tool.black]
line-length = 88
target-version = ['py38']

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.hatch.build.targets.wheel]
packages = ["."] 
